// Module-level build.gradle file

plugins {
    id 'com.android.application'

}

android {
    compileSdk 35
    defaultConfig {
        applicationId "lk.sanda.motive"
        minSdkVersion 28
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a"
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    namespace 'lk.sanda.motive'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
